fixed flex for logo spacing

--- a/css/contact.css
+++ b/css/contact.css
@@ -58,6 +58,6 @@ hr {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: center;
+    justify-content: space-around;
     margin: auto;
 }
